2007-05-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkFont.c:     TIP #145 implementation -
	* generic/tkFont.h:     Enhanced font handling.
	* win/tkWinDefault.h:
	* win/tkWinFont.c:
	* win/tkWinInt.h:
	* win/tkWinWm.c:
	* library/demos/widget:
	* library/ttk/fonts.tcl:

2007-05-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/ttk_treeview.n, doc/ttk_panedwindow.n, doc/ttk_dialog.n: 
	* doc/ttk_checkbutton.n, doc/tk.n, doc/menu.n, doc/font.n:
	* doc/canvas.n: Spelling fixes. [Bug 1686210]

2007-05-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkStubLib.c (Tk_InitStubs): 
	* generic/ttk/ttkLabel.c (LabelSetup): 
	* unix/tkUnixSelect.c (ConvertSelection): 
	* unix/tkUnixEvent.c (TkUnixDoOneXEvent): 
	* generic/tkConfig.c (Tk_RestoreSavedOptions): 
	* generic/tkCanvPs.c (TkCanvPostscriptCmd): 
	* generic/tkOption.c (GetDefaultOptions): 
	* unix/tkUnixRFont.c (TkpGetFontAttrsForChar, InitFont) 
	(TkpGetFontFamilies, TkpGetSubFonts): 
	* unix/tkUnixSend.c (TkpTestsendCmd, RegOpen): Squelch warnings from
	GCC type aliasing. [Bug 1711985 and others]

2007-04-29  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in: fix for default case in tk debug build detection.
	* unix/configure: autoconf-2.59

2007-04-27  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c(TagOptionSpecs): Use TK_OPTION_STRING
	instead of TK_OPTION_FONT to avoid resource leak in tag management.

2007-04-26  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSXTheme.c: Merged OFFSET_RECT processing into 
	BoxToRect(); factored out PatternOrigin; resynchronized
	with Tile codebase.

2007-04-26  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5a6 TAGGED FOR RELEASE ***

	* unix/Makefile.in (dist): correct tests/ttk glob inclusion

2007-04-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in (dist): add tests/ttk dir to src dist

	* unix/tkUnixMenubu.c (TkpDisplayMenuButton): init width/height to 0
